scrollbar style darkmode fix

--- a/src/styles/ui.styl
+++ b/src/styles/ui.styl
@@ -40,7 +40,8 @@ SCROLLBAR
   &::-webkit-scrollbar-thumb:window-inactive
     background alpha($color-black, 15%)
 
-  .darkMode &
+  .darkMode &,
+  &.darkMode
 
     &::-webkit-scrollbar-track
       background-color transparent
